# Stockpulse

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  database.py  main.py  models.py  nginx.conf  project_overview.txt  pyproject.toml  schema.py  setup_manual.txt  start.sh  stockpulse_handoff.md  stockpulse_handoff_v4.md  test_consumer.py  test_producer.py
app/: main.py
app/api/: historical_data.py  live_data.py  register.py  watchlists.py
app/core/: auth.py  cassandra.py  crypto.py  database.py  postgresql.py  redis.py
app/models/: models.py
app/schemas/: schema.py
consumer/: Dockerfile  consumer.py  pyproject.toml
ingestion/: Dockerfile  ingestion.py  pyproject.toml
migrations/: env.py
migrations/versions/: 4c7e3028161a_updated_database.py  954652c52dec_enhanced_user_details.py  c1ab01ca91e9_watchlist_tables.py  d6f77d76792d_create_users_table.py  fd2b8035fbf9_description_of_change.py
