[project]
name = "stockpulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "cassandra-driver>=3.29.3",
    "cryptography>=46.0.6",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "sqlalchemy>=2.0.48",
    "starlette>=0.52.1",
    "structlog>=25.5.0",
    "uvicorn>=0.42.0",
]
